--- a/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
+++ b/HabitTrackerApplication/webui/habit_tracker_application/src/style.css
@@ -548,7 +548,7 @@ input[type="date"].form-control::-webkit-calendar-picker-indicator {
   flex-direction: row !important;
   padding-right: 1rem;
   box-shadow: 0 0.125rem 0.375rem 0 rgba(115, 103, 240, 0.3);
-  background-color: var(--bg-color);
+  background-color: var(--bg-color) !important;
   border: none !important;
 }
 
@@ -1689,7 +1689,8 @@ text {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .theBest .highestCompletionRate {
@@ -1722,18 +1723,19 @@ text {
 }
 
 .trophy {
-  font-size: 5rem;
-  color: gold;
+  font-size: 6rem;
   display: inline-block;
   position: relative;
+  background-color: var(--card-text) !important;
+  border-radius: 50%;
 }
 
 .streak-value {
   position: absolute;
-  top: 20%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   font-weight: bold;
   color: black;
 }
@@ -1752,8 +1754,8 @@ text {
 .circular-progress {
   position: relative;
   display: inline-block;
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
 }
 
 .progress-ring {
@@ -1778,10 +1780,10 @@ text {
 
 .progress-value {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: bold;
   color: var(--text-color);
 }
